tests/03-typecheck/11-arith-ptr.ref
tests/03-typecheck/11-arith-ptr.stack:2:5, Semantic error: func ptr.+ has non matching args, expected (ptr, int) but got (int)
